# SUAS-2023

./: .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  communication.py  data.json  flight_manager.py  flyover_vision_pipeline.py  json_functions.py  listener.py  logger.py  mptest.log.1  mptest.log.10  mptest.log.2  mptest.log.3  mptest.log.4  mptest.log.5  mptest.log.6  mptest.log.7  mptest.log.8  mptest.log.9  pyproject.toml  run.py  test-2.py  test.py  test2.py  test_state_machine.py  unit_test_run.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
competition_inputs/: BottleJSON.json  BottleJSONReader.py
flight/: README.md  __init__.py  airdrop.py  camera.py  camera_test.xml  config.py  extract_gps.py  flight.py  flight_settings.py  goto.py  graceful_exit.py  move_to_test.py  state_settings.py  waypoint_data.json  xml_test.py
flight/Waypoint/: Move_To_Test.py  goto.py
flight/data/: README.md  (+4 more)
integration_tests/: emg_obj_integration_test.py  emg_obj_vision.py
state-machine/: drone.py
state_machine/: __init__.py  __main__.py  drone.py  flight_manager.py  flight_settings.py  state.json  state_machine.py  state_tracker.py  test-2.py  test.py  test2.py
vision/: Color Correct With Gray.py  Gamma Correct.py  README.md  airdrop_vision_pipeline.py  camera_distances.py  constants.py  coordinate_lengths.py  deskew.py  flyover_vision_pipeline.py  odlc-contour-filtering.py  odlc_Contour_Filtering.py  odlc_contour_filtering.py  unittest.py  vector_utils.py
(+138 files in other folders)
