[tool.poetry]
name = "suas-2022"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pip = "^22.0.4"
mavsdk = "*"
numpy = "^1.21.2"
opencv-python = "^4.5.3.56"
pytesseract = "^0.3.9"
lxml = "^4.8.0"
colorlog = "^6.6.0"
pyproj = "^3.3.0"
pyusb = "^1.2.1"
mypy = "^0.931"
matplotlib = "^3.5.1"
utm = "^0.7.0"
Shapely = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
